--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,6 +26,7 @@ steps:
   # "--region us-central1": Memilih us-central1 sebagai region yg akan digunakan pada cloud run
   # "--allow-unauthenticated": Agar BE dapat diakses di mana saja tanpa memerlukan autentikasi
   - name: "gcr.io/cloud-builders/gcloud"
+    entrypoint: gcloud
     args:
       [
         "run",
